# turchin

./: .gitignore  .gitmodules  CLAUDE.md  MAC_STUDIO_KICKOFF.md  MANAGER_ROLE.md  README.md  TURCHIN.md  WRITING_STYLE.md  pyproject.toml
.workers/: complete.sh  monitor.sh  spawn.sh  status.json
docs/: index.html
docs/assets/css/: style.css
docs/essays/: 001-introduction.html  002-seshat-data.html  003-mathematics-of-collapse.html  004-america.html  005-rome.html  006-policy.html  007-forecasting.html  008-claude-code-experiment.html  009-monte-carlo.html  010-explorer-guide.html  016-parameter-calibration.html  019-visualization.html
docs/explorer/: index.html
docs/explorer-v2/: index.html
docs/explorer-v2/assets/: index-CvrN6mPu.css  index-FQ--zElU.css
explorer-v2/: .gitignore  README.md  RESEARCH.md  index.html  package-lock.json  package.json  vite.config.ts
explorer-v2/src/: App.css  App.tsx  index.css
explorer-v2/src/components/: InstabilityChart.tsx  ParameterSliders.tsx  PhaseSpaceChart.tsx  TimeSeriesChart.tsx
explorer-v2/src/models/: parameters.ts  sdt.ts
explorer-v2/src/utils/: formatNumber.ts
explorer-v2/tests/: formatNumber.test.ts  sdt.test.ts
notebooks/: roman_empire.ipynb  us_ages_of_discord.ipynb
roblox/rome-assets/: ROJO_SETUP.md
roblox/rome-assets/rome-game/: .gitignore  aftman.toml  default.project.json
scripts/: calibration_demo.py  ensemble_example.py  generate_calibration_images.py  generate_essay3_animation.py  generate_essay3_charts.py  generate_essay3_images.py  generate_essay4_viz.py  generate_essay5_viz.py  generate_essay_010_charts.py  generate_essay_010_images.py  generate_essay_019_charts.py  generate_essay_019_images.py  generate_essay_019_visuals.py  generate_essay_067_visuals.py  generate_essay_068_animations.py  generate_essay_068_charts.py  generate_essay_068_images.py  generate_essay_070_animations.py  generate_essay_070_charts.py  generate_essay_070_images.py  generate_policy_charts.py  word_count.py
scripts/examples/: monte_carlo_us_forecast.py  plotly_animation_examples.py
src/cliodynamics/: __init__.py
src/cliodynamics/analysis/: __init__.py  sensitivity.py
src/cliodynamics/calibration/: __init__.py
src/cliodynamics/case_studies/: __init__.py  roman_empire.py
src/cliodynamics/data/: __init__.py  access.py  api_client.py  download.py  download_polaris.py  parser.py  polars_adapter.py
src/cliodynamics/forecast/: __init__.py  forecaster.py  scenarios.py  uncertainty.py
src/cliodynamics/models/: __init__.py  ages_of_discord.py  params.py  sdt.py
src/cliodynamics/policy/: __init__.py  analysis.py  counterfactual.py  interventions.py
src/cliodynamics/simulation/: __init__.py  ensemble.py  monte_carlo.py
tests/: __init__.py  test_access.py  test_ages_of_discord.py  test_calibration.py  test_data.py  test_ensemble.py  test_models.py  test_monte_carlo.py  test_package.py  test_sensitivity.py  test_simulation.py  test_viz.py
tests/case_studies/: __init__.py  test_roman_empire.py
tests/data/: __init__.py  test_api_client.py  test_download_polaris.py  test_polaris.py  test_polars_adapter.py  test_us_data.py
tests/forecast/: test_forecaster.py  test_scenarios.py  test_uncertainty.py
tests/policy/: __init__.py  test_analysis.py  test_counterfactual.py  test_interventions.py
tests/viz/: __init__.py  test_animations.py  test_charts.py  test_ensemble_viz.py  test_monte_carlo_viz.py  test_plotly_animations.py
(+31 files in other folders)
