[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cliodynamics"
version = "0.1.0"
description = "Mathematical modeling of historical dynamics using Structural-Demographic Theory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Cliodynamics Contributors"}
]
keywords = ["cliodynamics", "historical-dynamics", "structural-demographic-theory", "turchin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "requests>=2.28",
    "openpyxl>=3.1",
    "polars>=1.0",
    "pyarrow>=10.0",
    "fastexcel>=0.7.0",
    "imagesize>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "kaleido",
]
api = [
    "seshat_api @ git+https://github.com/Seshat-Global-History-Databank/seshat_api.git",
]
all = [
    "cliodynamics[dev,api]",
]

[project.urls]
Homepage = "https://github.com/bedwards/turchin"
Repository = "https://github.com/bedwards/turchin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Scripts need to modify sys.path before importing local modules
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
